1.移除disruptor，实际测试对性能提升不明显，速度不够快的主要原因事件持久化速度不够快。